# rs_webs

./: Cargo.toml
examples/basics/basic/: Cargo.toml
examples/basics/basic/src/: main.rs
examples/basics/error-handling/: Cargo.toml
examples/basics/error-handling/src/: main.rs
examples/basics/hello-world/: Cargo.toml
examples/basics/hello-world/src/: main.rs
examples/basics/nested-routing/: Cargo.toml
examples/basics/nested-routing/src/: app_config.rs  common.rs  lib.rs  main.rs
examples/basics/nested-routing/src/handlers/: parts.rs  products.rs
examples/basics/state/: Cargo.toml
examples/basics/state/src/: main.rs
examples/basics/static-files/: Cargo.toml
examples/basics/static-files/src/: main.rs
examples/basics/todo/: Cargo.toml
examples/basics/todo/src/: api.rs  db.rs  main.rs  model.rs  session.rs
examples/cors/backend/: Cargo.toml
examples/cors/backend/src/: main.rs  user.rs
examples/data-factory/: Cargo.toml
examples/data-factory/src/: main.rs
examples/databases/diesel/: Cargo.toml
examples/databases/diesel/src/: actions.rs  main.rs  models.rs  schema.rs
