[package]
name = "error-handling"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true

derive_more.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
