[package]
name = "todo"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files.workspace = true
actix-session = { workspace = true, features = ["cookie-session"] }
actix-web.workspace = true

dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tera = "1.5"
