[package]
name = "diesel"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
diesel = { version = "2", features = ["sqlite", "r2d2"] }
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
